return data from offer to home

--- a/app/views/order-offer.html
+++ b/app/views/order-offer.html
@@ -11,14 +11,14 @@
         <div class="col-md-9">
           <div class="panel-white panel-white-bordered-">
             <div class="order-wizard">
-              <a href="#">
+              <a ng-click="ctrl.remakeShipment()">
                 <span translate="ORDER.STEP_TITLE.SHIPMENT"></span>
                 <i class="fa fa-pencil"></i>
               </a>
               <a class="active" translate="ORDER.STEP_TITLE.OFFERS">2. The offers</a>
-              <a class="disabled" href="#" translate="ORDER.STEP_TITLE.ORDER">3. Your order</a>
-              <a class="disabled" href="#" translate="ORDER.STEP_TITLE.PAYMENT">4. Payment</a>
-              <a class="disabled" href="#" translate="ORDER.STEP_TITLE.CONFIRMATION">5. Confirmation</a>
+              <a class="disabled" translate="ORDER.STEP_TITLE.ORDER">3. Your order</a>
+              <a class="disabled" translate="ORDER.STEP_TITLE.PAYMENT">4. Payment</a>
+              <a class="disabled" translate="ORDER.STEP_TITLE.CONFIRMATION">5. Confirmation</a>
             </div>
 
             <h1 class="blue text-center">
