--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1849,11 +1849,35 @@ p.payment_module img {margin: 0 10px 0px 0;}
 .arrow_box_large .orange {font-weight: bold;}
 .arrow_box_large .orange strong {font-size: 22px;}
 
-.order-wizard {margin: 0 auto 0px auto; text-align: center; max-width: 100%;}
-.order-wizard a {display: inline-block; width: 135px; /*height: 25px; line-height: 25px;*/ margin: 0 4px 10px 0; padding: 4px 8px; font-size: 12px; color: #fff; background: #999; text-decoration: none; overflow: hidden; text-align: left;}
+.order-wizard
+{
+  margin: 0 auto 0 auto;
+  text-align: center;
+  max-width: 100%;
+}
+.order-wizard a
+{
+  display: inline-block;
+  width: 135px;
+  margin: 0 4px 10px 0;
+  padding: 4px 8px;
+  font-size: 12px;
+  color: #fff;
+  background: #999;
+  text-decoration: none;
+  overflow: hidden;
+  text-align: left;
+  cursor: pointer;
+}
+
 .order-wizard a:last-child {margin-right: 0;}
 .order-wizard a i {float: right;}
-.order-wizard a.active {background: #eb5f3b;}
+.order-wizard a.active
+{
+  background: #eb5f3b;
+  cursor: pointer;
+}
+
 .order-wizard a.active, .order-wizard a.disabled {cursor: default;}
 
 .offer-tabs > li a {font-weight: bold;}
