return data from order to offer/home

--- a/app/views/order-order.html
+++ b/app/views/order-order.html
@@ -5,11 +5,11 @@
         <div class="col-md-9">
           <div class="panel-white panel-white-bordered-">
             <div class="order-wizard">
-              <a href="#/">
+              <a ng-click="ctrl.remakeShipment()">
                 <span translate="ORDER.STEP_TITLE.SHIPMENT"></span>
                 <i class="fa fa-pencil"></i>
               </a>
-              <a href="#/order-offer">
+              <a  ng-click="ctrl.remakeOffer()">
                 <span translate="ORDER.STEP_TITLE.OFFERS"></span>
                 <i class="fa fa-pencil"></i>
               </a>
