--- a/app/views/order-payment.html
+++ b/app/views/order-payment.html
@@ -1,22 +1,19 @@
 <div id="wrapper" class="clearfix container">
   <div class="clearfix row">
     <section id="main" class="col-lg-12">
-      <div id="load">
-        <img src="images/loading.gif" alt="Loading...">&nbsp;&nbsp;Please wait...
-      </div>
       <div class="row">
         <div class="col-md-9">
           <div class="panel-white panel-white-bordered-">
             <div class="order-wizard">
-              <a href="#/">
+              <a ng-click="ctrl.remakeShipment()">
                 <span translate="ORDER.STEP_TITLE.SHIPMENT"></span>
                 <i class="fa fa-pencil"></i>
               </a>
-              <a href="#/order-offer">
+              <a  ng-click="ctrl.remakeOffer()">
                 <span translate="ORDER.STEP_TITLE.OFFERS"></span>
                 <i class="fa fa-pencil"></i>
               </a>
-              <a href="#/order-order">
+              <a  ng-click="ctrl.remakeOrder()">
                 <span translate="ORDER.STEP_TITLE.ORDER">3. Your order </span>
                 <i class="fa fa-pencil"></i>
               </a>
